Only check for legacy system tray icons if we're going to make one

Summary:
On Plasma is a rather pointless check as our QPT uses SNIs
so we end up checking something we've already checked,
only in a blocking way - and we're going to no-op anyway.

BUG: 385371

Test Plan:
killed kded5
created an SNI. It failed into the else branch

Reviewers: #plasma

Subscribers: plasma-devel, #frameworks

Tags: #plasma, #frameworks

Differential Revision: https://phabricator.kde.org/D8321